crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-lexical-capture-before-conditional-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-lexical-capture-before-conditional-overwrite.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(t0) {
	const $ = _c(3);
	const { flag } = t0;
	let read;
	let t1;
	if ($[0] !== flag) {
		function arguments() {
			return "base";
		}
		read = () => arguments();
		if (flag) {}
		t1 = read();
		$[0] = flag;
		$[1] = t1;
		$[2] = read;
	} else {
		t1 = $[1];
		read = $[2];
	}
	return t1;
}
