crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-namespace.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-namespace.ts
---
// @script
namespace arguments {
	export const value = 1;
}
const Component = () => {
	return arguments.value;
};
