crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-parameter-captured-by-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-parameter-captured-by-arrow.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(arguments) {
	const $ = _c(4);
	let t0;
	if ($[0] !== arguments.value) {
		const read = () => arguments.value;
		t0 = read();
		$[0] = arguments.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== t0) {
		t1 = <div>{t0}</div>;
		$[2] = t0;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "hello" }]
};
