crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-parameter-conditional-annex-b.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-parameter-conditional-annex-b.js
---
// @script
function Component(arguments, flag) {
	if (flag) {}
	return arguments.value;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "hello" }, true]
};
