crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-through-type-only-capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-through-type-only-capture.tsx
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(t0) {
	const $ = _c(4);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		let arguments = { value };
		const read = () => arguments.value;
		arguments = { value: `${arguments.value}!` };
		t1 = read();
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	let t2;
	if ($[2] !== t1) {
		t2 = <div>{t1}</div>;
		$[2] = t1;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "hello" }]
};
