crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-through-type-only.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-through-type-only.tsx
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(arguments) {
	const $ = _c(2);
	let t0;
	if ($[0] !== arguments.value) {
		t0 = <div>{arguments.value}</div>;
		$[0] = arguments.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: "hello" }]
};
