crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-var-function-redeclaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-var-function-redeclaration.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "(BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration", labels: [LabeledSpan { label: None, span: Span { start: 36, end: 50 }, primary: true }], help: Some("Rewrite the highlighted code using syntax supported by React Compiler"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
