crates/oxc_react_compiler/tests/snapshots/valid-global-arguments-in-top-level-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-global-arguments-in-top-level-arrow.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
const Component = () => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{arguments.value}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
};
